# U_SDMX

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/USDMX/: sdmx_data_access.py  sdmx_data_access_old.txt  sdmx_parser.py
