[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "USDMX"
version = "0.0.2"
authors = [
  { name="Daniele Olivotti"},
]
description = "A SDMX reader package"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "pandas ~=1.3",
  "requests ~=2.31",
  "requests_cache ~=1.1",
  "SDMXthon == 2.4"
]